<resources>
    <string name="app_name">Reversi</string>

    <string name="banner_ad_unit_id">ca-app-pub-1765755909018734/3544306807</string>
    <string name="inter_ad_unit_id">ca-app-pub-1765755909018734/5719044002</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_setting_key">general</string>

    <string name="json_type">type</string>
    <string name="json_actionType">actionType</string>
    <string name="json_row">row</string>
    <string name="json_col">col</string>
    <string name="json_value">value</string>

    <string name="turn_key">turn</string>
    <string name="game_key">game</string>
    <string name="action_key">action</string>
    <string name="accelometer_key">accelometer_key</string>
    <string name="name_key">name_key</string>
    <string name="connection_key">connection_key</string>
    <string name="disconnect_action_key">disconnect_action</string>
    <string name="disconnect_value">disconnect_val</string>

    <string name="row_key">row</string>
    <string name="col_key">col</string>
    <string name="game_state">gameState</string>
    <string name="start_game">startGame</string>
    <string name="wait_for_opp_to_host">wait</string>
    <string name="wait_for_opp_join">waitJoin</string>
    <string name="connection_fail">fail</string>

    <string name="ip_request">ipRec</string>
    <string name="ip_address">ipAddress</string>
    <string name="is_my_turn_key"></string>
    <string name="multi_player_key">multiPlayer</string>
    <string name="shake">shake</string>
    <string name="computer_mode_key">computer_key</string>
    <string name="settings_type_key">settingType</string>
    <string name="shake_feature_pref_key">shake_feature</string>
    <string name="backgroung_music_pref_key">background_music_key</string>
    <string name="cheers_sound_key">cheers_music_key</string>
    <string name="name_settings_key">name_key</string>

    <string name="my_turn_text">Your turn</string>
    <string name="one_player_string">One player</string>
    <string name="two_players_string">Two players</string>
    <string name="join_game_wifi_string">Join game(WIFI)</string>
    <string name="host_game_wifi_string">Host game(WIFI)</string>
    <string name="levels_string">Levels</string>
    <string name="reversi_string">Reversi</string>
    <string name="rate_us_string">Rate Us</string>
    <string name="settings_string">Settings</string>
    <string name="credits_string">Credits</string>
    <string name="choose_difficulty_string">Choose Difficulty :</string>
    <string name="board_size_string">Board size :</string>
    <string name="start_string">Start</string>
    <string name="play_string">PLAY</string>
    <string name="replay_string">Replay</string>
    <string name="back_string">Back</string>
    <string name="watch_video_to_n_get_3_moves_back_string">Watch Video To  Get 3 Moves Back</string>
    <string name="skip_string">Skip</string>
    <string name="watch_string">watch</string>
    <string name="next_string">Next</string>
    <string name="level_string">Level</string>
    <string name="computer_string">Computer</string>
    <string name="base_won_regular_str">"%s Won !"</string>
    <string name="base_turn_str">"%s's turn"</string>
    <string name="win_regular_and_unlock_lvl">You Won !\n You have unlock level %d</string>
    <string name="win_regular_level">You Won !</string>
    <string name="opponent">Opponent</string>
    <string name="waiting">Waiting ...</string>
    <string name="black_player">Black player</string>
    <string name="white_player">White player</string>

    <string name="base_won_after_player_no_moves_str">"The player have no legal moves available\nAccording to the current result\n\n %s Won !"</string>
    <string name="win_after_player_no_moves_and_unlock_lvl">The player have no legal moves available\nAccording to the current result\n\n You Won !\n You have unlock level %d</string>
    <string name="win_after_player_no_moves_level">The player have no legal moves available\nAccording to the current result\n\n You Won !</string>


    <string name="base_won_after_any_no_moves_str">There are no legal moves available for both players\nAccording to the current result\n\n %s Won !"</string>
    <string name="win_after_any_no_moves_and_unlock_lvl">There are no legal moves available for both players\nAccording to the current result\n\n You Won !\n You have unlock level %d</string>
    <string name="win_after_any_no_moves_level">There are no legal moves available for both players\nAccording to the current result\n\n You Won !</string>
</resources>
