<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical" android:layout_width="350dp"
    android:id="@+id/dialog_head"
    android:layout_height="300dp"
    android:radius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.5">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/x"
            android:id="@+id/start_x"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:layout_weight="1" />


    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/board_size_text"
            android:text="@string/choose_difficulty_string"
            android:scaleY="0.88"
            android:scaleX="0.88"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#80000000"
            android:id="@+id/start_game_spinner_difficulty">

        </Spinner>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />


    </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/btn_rounded_backgorund"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/board_size_string"
            android:id="@+id/choose_diff_text"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="8"
            android:textSize="35sp"
            android:background="@drawable/btn_rounded_backgorund"
            android:id="@+id/board_size_8_btn"/>


        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="10"
            android:textSize="35sp"
            android:background="@drawable/btn_rounded_backgorund"
            android:id="@+id/board_size_10_btn"/>


        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="55sp"
        android:text="@string/start_string"
        android:scaleX="0.3"
        android:scaleY="0.7"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/btn_rounded_backgorund"
        android:id="@+id/start_game_btn"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

</LinearLayout>